--- a/app/src/main/res/layout/activity_mobile_no_verification.xml
+++ b/app/src/main/res/layout/activity_mobile_no_verification.xml
@@ -15,7 +15,6 @@
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:src="@drawable/logo"
-            app:tint="@color/baseColor"
             android:layout_marginTop="10dp"
             android:scaleType="centerInside"
             />
@@ -80,6 +79,7 @@
                 />
 
             <LinearLayout
+                android:id="@+id/llLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
